fix(film-storage): eliminate N+1 queries; always use 2 queries (JOIN MPA + bulk genres)